# LinuxPackageExample

./: App.desktop  CMakeLists.txt  PyApp.py  README.md  ku.cpp  ku.h  main.cpp  pyku.cpp
